--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/png" href="./grid/favicon.ico">
     <meta charset="utf-8"/>
     <script src="wasm_exec.js"></script>
+    <style>
+        html {font-family: Consolas;}
+    </style>
+    <link rel="stylesheet" href="./styles.css">
     <script>
         const go = new Go();
         let mod, inst;
@@ -25,12 +29,17 @@
 </head>
 <body>
 <div class="container">
-    <div class="row" style="margin-top: 20px">
-        Start image:
-        <img src="/lenna.png" alt="Start image">
-        Test:
-        <image id="targetImg" class="image" />
-    </div>
+    <main class="content">
+        <h1>Image processing: Go -> WebAssembly</h1>
+        <div class="start-container">
+            <h2>Start image:</h2>
+            <img class="" src="/lenna.png" alt="Start image" style="width: 300px;">
+        </div>
+        <div class="result-container">
+            <h2>Result imge:</h2>
+            <img id="targetImg" class="image" style="width: 300px;"/>
+        </div>
+    </main>
 </div>
 </body>
 </html>
