js callbacks works: app runing image processing after button event

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 <div class="container">
     <main class="content">
         <h1>Image processing: Go -> WebAssembly</h1>
+        <div class="btn-container">
+            <button id="myButton">bttn</button>
+            <!-- <button>Blur</button> -->
+        </div>
         <div class="start-container">
             <h2>Start image:</h2>
             <img class="" src="/lenna.png" alt="Start image" style="width: 300px;">
