new processing algoritm: invert

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <main class="content">
         <h1>Image processing: Go -> WebAssembly</h1>
         <div class="btn-container">
-            <button id="myButton">bttn</button>
+            <button id="btn-1">make gaussian</button>
+            <button id="btn-2">make grayscale</button>
+            <button id="btn-3">make invert</button>
             <!-- <button>Blur</button> -->
         </div>
         <div class="start-container">
