simple typo changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>elo</title>
+    <title>Image processing in WebAssembly</title>
     <link rel="icon" type="image/png" href="./grid/favicon.ico">
     <meta charset="utf-8"/>
     <script src="wasm_exec.js"></script>
