--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </style>
     <link rel="stylesheet" href="./styles.css">
     <script>
+        console.log("wait for wasm...")
         const go = new Go();
         let mod, inst;
         let imageType;
