edge detection added | new time measure tactic

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
             <button id="btn-1">make gaussian</button>
             <button id="btn-2">make grayscale</button>
             <button id="btn-3">make invert</button>
+            <button id="btn-4">detect edges</button>
             <!-- <button>Blur</button> -->
         </div>
         <div class="start-container">
             <h2>Start image:</h2>
-            <img class="" src="/lenna.png" alt="Start image" style="width: 300px;">
+            <img class="" src="./lenna.png" alt="Start image" style="width: 300px;">
         </div>
         <div class="result-container">
             <h2>Result imge:</h2>
