--- a/index.html
+++ b/index.html
@@ -27,25 +27,44 @@
 			document.getElementById('targetImg').src = URL.createObjectURL(blob);
 		}
     </script>
+    <script type="module" src="./imageMagic.js"></script>
 </head>
 <body>
 <div class="container">
+    <h1>Image processing in WebAssembly</h1>
     <main class="content">
-        <h1>Image processing: Go -> WebAssembly</h1>
-        <div class="btn-container">
-            <button id="btn-1">make gaussian</button>
-            <button id="btn-2">make grayscale</button>
-            <button id="btn-3">make invert</button>
-            <button id="btn-4">detect edges</button>
-            <!-- <button>Blur</button> -->
+        <div class="go-processing">
+            <h2>Go Lang</h2>
+            <div class="btn-container">
+                <button id="btn-1">make gaussian</button>
+                <button id="btn-2">make grayscale</button>
+                <button id="btn-3">make invert</button>
+                <button id="btn-4">detect edges</button>
+                <!-- <button>Blur</button> -->
+            </div>
+            <div class="start-container">
+                <h2>Start image:</h2>
+                <img class="" src="./lenna.png" alt="Start image" style="width: 300px;">
+            </div>
+            <div class="result-container">
+                <h2>Result imge:</h2>
+                <img id="targetImg" class="image" style="width: 300px;"/>
+            </div>
         </div>
-        <div class="start-container">
-            <h2>Start image:</h2>
-            <img class="" src="./lenna.png" alt="Start image" style="width: 300px;">
-        </div>
-        <div class="result-container">
-            <h2>Result imge:</h2>
-            <img id="targetImg" class="image" style="width: 300px;"/>
+        <div class="cpp-processing">
+            <h2>ImageMagic</h2>
+            <div class="btn-container">
+                <button id="btn-cpp-1">make blur</button>
+                <button id="btn-cpp-2">detect edges</button>
+            </div>
+            <div class="start-container">
+                <h2>Start image:</h2>
+                <img class="" src="./lenna.png" alt="Start image" style="width: 300px;">
+            </div>
+            <div class="result-container">
+                <h2>Result imge:</h2>
+                <img id="transformed-image" class="image" style="width: 300px;"/>
+            </div>
         </div>
     </main>
 </div>
