--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="result-container">
                 <h2>Result imge:</h2>
                 <!-- <img id="transformed-image-js" class="image" style="width: 300px;"/> -->
-                <canvas id="transformed-image-js" style="width: 300px; height: 300px;" width="200" height="200"></canvas>
+                <canvas id="transformed-image-js" style="width: 300px; height: 300px;"></canvas>
             </div>
         </div>
     </main>
