uugh, first attempts for machine (x10) processing and sending this for backend

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <div class="btn-container">
                 <button id="btn-cpp-1">make blur</button>
                 <button id="btn-cpp-2">detect edges</button>
+                <button id="btn-cpp-2-machine-testing">detect edges (x10)</button>
             </div>
             <div class="start-container">
                 <h2>Start image:</h2>
@@ -67,6 +68,8 @@
                 <img id="transformed-image" class="image" style="width: 300px;"/>
             </div>
         </div>
+
+        <!-- pure js - disabled for now (display: none) -->
         <div class="pure-js">
             <h2>JavaScript</h2>
             <div class="btn-container">
@@ -82,6 +85,7 @@
                 <canvas id="transformed-image-js" style="width: 300px; height: 300px;"></canvas>
             </div>
         </div>
+        <!-- pure js - disabled for now (display: none) -->
     </main>
 </div>
 </body>
