10x testing done - need backend flask server for work here

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		}
     </script>
     <script type="module" src="./imageMagic.js"></script>
-    <script type="module" src="./pureJsImageProcessing.js"></script>
+    <script type="module" src="./src/pureJsImageProcessing.js"></script>
 </head>
 <body>
 <div class="container">
