pure JS working now | little modifications in .go processing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		}
     </script>
     <script type="module" src="./imageMagic.js"></script>
-    <script type="module" src="./pureJsImageProcessing.js"></script>
+    <script type="module" src="src/pureJsImageProcessing.js"></script>
 </head>
 <body>
 <div class="container">
@@ -57,7 +57,7 @@
             <div class="btn-container">
                 <button id="btn-cpp-1">make blur</button>
                 <button id="btn-cpp-2">detect edges</button>
-                <button id="btn-cpp-2-machine-testing">detect edges (x10)</button>
+                <!-- <button id="btn-cpp-2-machine-testing">detect edges (x10)</button> -->
             </div>
             <div class="start-container">
                 <h2>Start image:</h2>
