new version of main branch

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="btn-container">
                 <button id="btn-cpp-1">make blur</button>
                 <button id="btn-cpp-2">detect edges</button>
-                <!-- <button id="btn-cpp-2-machine-testing">detect edges (x10)</button> -->
+                <button id="btn-cpp-2-machine-testing">detect edges (x10)</button>
             </div>
             <div class="start-container">
                 <h2>Start image:</h2>
